// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login validation 1`] = `
Object {
  "feedback": Object {
    "email": Array [
      "A valid email is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`Login validation 2`] = `
Object {
  "feedback": Object {
    "password": Array [
      "A valid password is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`Login validation 3`] = `
Object {
  "message": "Incorrect email or password",
}
`;

exports[`Login with disabled user 1`] = `
Object {
  "message": "Incorrect email or password",
}
`;

exports[`Login with valid credentials 1`] = `
Object {
  "email": "general_user_test@example.com",
  "emailVerified": true,
  "firstName": "General User",
  "id": 1,
  "lastName": "Test",
}
`;
